
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_18__ TYPE_2__ ;
typedef struct TYPE_17__ TYPE_1__ ;


struct TYPE_17__ {scalar_t__ r; scalar_t__ i; } ;
typedef TYPE_1__ kissf_fft_cpx ;
typedef TYPE_2__* kissf_fft_cfg ;
struct TYPE_18__ {scalar_t__ inverse; TYPE_1__* twiddles; } ;


 int C_ADD (TYPE_1__,TYPE_1__,TYPE_1__) ;
 int C_ADDTO (TYPE_1__,TYPE_1__) ;
 int C_FIXDIV (TYPE_1__,int) ;
 int C_MUL (TYPE_1__,TYPE_1__,TYPE_1__) ;
 int C_SUB (TYPE_1__,TYPE_1__,TYPE_1__) ;

__attribute__((used)) static void kf_bfly4(
        kissf_fft_cpx * Fout,
        const size_t fstride,
        const kissf_fft_cfg st,
        const size_t m
        )
{
    kissf_fft_cpx *tw1,*tw2,*tw3;
    kissf_fft_cpx scratch[6];
    size_t k=m;
    const size_t m2=2*m;
    const size_t m3=3*m;


    tw3 = tw2 = tw1 = st->twiddles;

    do {
        C_FIXDIV(*Fout,4); C_FIXDIV(Fout[m],4); C_FIXDIV(Fout[m2],4); C_FIXDIV(Fout[m3],4);

        C_MUL(scratch[0],Fout[m] , *tw1 );
        C_MUL(scratch[1],Fout[m2] , *tw2 );
        C_MUL(scratch[2],Fout[m3] , *tw3 );

        C_SUB( scratch[5] , *Fout, scratch[1] );
        C_ADDTO(*Fout, scratch[1]);
        C_ADD( scratch[3] , scratch[0] , scratch[2] );
        C_SUB( scratch[4] , scratch[0] , scratch[2] );
        C_SUB( Fout[m2], *Fout, scratch[3] );
        tw1 += fstride;
        tw2 += fstride*2;
        tw3 += fstride*3;
        C_ADDTO( *Fout , scratch[3] );

        if(st->inverse) {
            Fout[m].r = scratch[5].r - scratch[4].i;
            Fout[m].i = scratch[5].i + scratch[4].r;
            Fout[m3].r = scratch[5].r + scratch[4].i;
            Fout[m3].i = scratch[5].i - scratch[4].r;
        }else{
            Fout[m].r = scratch[5].r + scratch[4].i;
            Fout[m].i = scratch[5].i - scratch[4].r;
            Fout[m3].r = scratch[5].r - scratch[4].i;
            Fout[m3].i = scratch[5].i + scratch[4].r;
        }
        ++Fout;
    }while(--k);
}
